@@ -2,6 +2,8 @@ PostGIS 1.1.3CVS
 
 	- WKT parser: forbidden construction of multigeometries with
 	  EMPTY elements (still supported for GEOMETRYCOLLECTION).
+	- Added --with-proj-libdir and --with-geos-libdir configure
+	  switches
 
 PostGIS 1.1.2
 2006/03/30
